--- a/deploy-springbot.yaml
+++ b/deploy-springbot.yaml
@@ -16,7 +16,7 @@ spec:
     spec:                     # Spec for the containers that will be run in the Pods
       containers:
       - name: polling-app-server
-        image: callicoder/polling-app-server:1.0.0
+        image: callicoder/polling-app-server
         imagePullPolicy: IfNotPresent
         ports:
           - name: http
