--- a/persistentvolumeclaim-mysql.yaml
+++ b/persistentvolumeclaim-mysql.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
-kind: PersistentVolumeClaim        # Create a PersistentVolumeClaim to request a PersistentVolume storage
-metadata:                          # Claim name and labels
+kind: PersistentVolumeClaim        
+metadata:                          
   name: mysql-pv-claim
   labels:
     app: polling-app
-spec:                              # Access mode and resource limits
-  storageClassName: standard       # Request a certain storage class
+spec:                              
+  storageClassName: standard       
   accessModes:
-    - ReadWriteOnce                # ReadWriteOnce means the volume can be mounted as read-write by a single Node
+    - ReadWriteOnce                
   resources:
     requests:
       storage: 250Mi
