--- a/service-springapp.yaml
+++ b/service-springapp.yaml
@@ -1,14 +1,14 @@
-apiVersion: v1                # API version
-kind: Service                 # Type of the kubernetes resource
+apiVersion: v1                
+kind: Service                 
 metadata:                     
-  name: polling-app-server    # Name of the kubernetes resource
-  labels:                     # Labels that will be applied to this resource
+  name: polling-app-server    
+  labels:                     
     app: polling-app-server
 spec:                         
-  type: NodePort              # The service will be exposed by opening a Port on each node and proxying it. 
+  type: NodePort              
   selector:
-    app: polling-app-server   # The service exposes Pods with label `app=polling-app-server`
-  ports:                      # Forward incoming connections on port 8080 to the target port 8080
+    app: polling-app-server   
+  ports:                      
   - name: http
     port: 8080
     targetPort: 8080
