--- a/service-frontend.yaml
+++ b/service-frontend.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1                  # API version
-kind: Service                   # Type of kubernetes resource
+apiVersion: v1                  
+kind: Service                   
 metadata:
-  name: polling-app-client      # Name of the kubernetes resource
+  name: polling-app-client      
 spec:
-  type: NodePort                # Exposes the service by opening a port on each node
+  type: NodePort                
   selector:
-    app: polling-app-client     # Any Pod matching the label `app=polling-app-client` will be picked up by this service
-  ports:                        # Forward incoming connections on port 80 to the target port 80 in the Pod
+    app: polling-app-client     
+  ports:                        
   - name: http
     port: 80
     targetPort: 80
